OSSM/1_32/must-gather.local.3859268501405119422/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-4d59bccd930a20d3ef173ce3b67824c13e4a552054077134140a87f49a661feb/namespaces/istio-system/networking.istio.io/envoyfilters/tcp-metadata-exchange-1.6-basic.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1alpha3","kind":"EnvoyFilter","metadata":{"annotations":{"maistra.io/mesh-generation":"2.5.1-1-2"},"labels":{"app.kubernetes.io/component":"mesh-config","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"mesh-config","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.5.1-1-2","istio.io/rev":"basic","maistra-version":"2.4.7","maistra.io/owner":"istio-system","maistr [...]
    maistra.io/mesh-generation: 2.5.1-1-2
  creationTimestamp: "2024-06-05T10:45:54Z"
  generation: 1
  labels:
    app.kubernetes.io/component: mesh-config
    app.kubernetes.io/instance: istio-system
    app.kubernetes.io/managed-by: maistra-istio-operator
    app.kubernetes.io/name: mesh-config
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 2.5.1-1-2
    istio.io/rev: basic
    maistra-version: 2.4.7
    maistra.io/owner: istio-system
    maistra.io/owner-name: basic
  managedFields:
  - apiVersion: networking.istio.io/v1alpha3
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:maistra.io/mesh-generation: {}
        f:labels:
          .: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/managed-by: {}
          f:app.kubernetes.io/name: {}
          f:app.kubernetes.io/part-of: {}
          f:app.kubernetes.io/version: {}
          f:istio.io/rev: {}
          f:maistra-version: {}
          f:maistra.io/owner: {}
          f:maistra.io/owner-name: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"b5faf99f-8aeb-4477-aa3e-3f2e4796ec3c"}: {}
      f:spec:
        .: {}
        f:configPatches: {}
    manager: istio-operator
    operation: Update
    time: "2024-06-05T10:45:54Z"
  name: tcp-metadata-exchange-1.6-basic
  namespace: istio-system
  ownerReferences:
  - apiVersion: maistra.io/v2
    blockOwnerDeletion: true
    controller: true
    kind: ServiceMeshControlPlane
    name: basic
    uid: b5faf99f-8aeb-4477-aa3e-3f2e4796ec3c
  resourceVersion: "35326"
  uid: 9f60f7c4-95b1-4ad6-8a08-3094b3457d8d
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: SIDECAR_INBOUND
      listener: {}
      proxy:
        proxyVersion: ^1\.6.*
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.metadata_exchange
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
          value:
            protocol: istio-peer-exchange
  - applyTo: CLUSTER
    match:
      cluster: {}
      context: SIDECAR_OUTBOUND
      proxy:
        proxyVersion: ^1\.6.*
    patch:
      operation: MERGE
      value:
        filters:
        - name: istio.metadata_exchange
          typed_config:
            '@type': type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
            value:
              protocol: istio-peer-exchange
  - applyTo: CLUSTER
    match:
      cluster: {}
      context: GATEWAY
      proxy:
        proxyVersion: ^1\.6.*
    patch:
      operation: MERGE
      value:
        filters:
        - name: istio.metadata_exchange
          typed_config:
            '@type': type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
            value:
              protocol: istio-peer-exchange
